tests/negative/Sorry.lean
-- This fixture must fail when checked with warnings promoted to errors.
example : False := by
  sorry
